set timeout now works

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>rwv</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <!-- progress bar 
+    <link
+      href="https://unpkg.com/nprogress@0.2.0/nprogress.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
+-->
+    <title>RW Vue</title>
   </head>
-  <body>
+  <body class="ui-mobile-viewport ui-overlay-a">
     <noscript>
-      <strong>We're sorry but rwv doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but soilhealth.app doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      >
     </noscript>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
